<resources>
    <string name="app_name">Smartify</string>
    <string name="title_activity_device_edit">EditDeviceActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_done">Done</string>


    <string name="error_field_required">required field</string>
    <string name="error_invalid_field">invalid</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!--&lt;!&ndash; Transition type strings &ndash;&gt;-->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <!-- UI Strings -->
    <string name="garage_status_description">Image indicating if garage is open or closed</string>
    <string name="garage">garage</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="device_id">Device ID</string>
    <string name="access_token">Access Token</string>
    <string name="relay_number">Relay Number</string>
    <string name="location">Location</string>
    <string name="set_to_current">Set to current</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="auto_open">Auto Open</string>
    <string name="device_name">Device Name</string>

</resources>
