<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.smartify.editdevice.EditDeviceActivity"
    tools:showIn="@layout/activity_device_edit">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_name"
            android:inputType="textCapWords"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/device_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_id"
            android:inputType="number"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/device_access_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/access_token"
            android:inputType="textVisiblePassword"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/device_relay_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/relay_number"
            android:inputType="number"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_vertical"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_to_current"
            android:onClick="onSetCurrentLocation"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/device_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/latitude"
                android:inputType="numberDecimal"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/device_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/longitude"
                android:inputType="numberDecimal"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/device_auto_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_open"/>

</LinearLayout>

